--- a/public/style.css
+++ b/public/style.css
@@ -22,13 +22,9 @@
         -webkit-tap-highlight-color: rgba(0,0,0,0); 
         -webkit-user-select: none;
         -webkit-tap-highlight-color: rgba(0,0,0,0); 
-        /*
-        width: 100%;
-        height: 100%;
-        */
       }
       #fullscreen-button {
         position: absolute; top: 0; left: 0;
-        background-color: red;
+        background-color: rgba(255, 0, 0, 0.5);
         width: 10%; height: 10%;
       }
