tie camera rotation to ball rotation

--- a/public/style.css
+++ b/public/style.css
@@ -1,30 +1,33 @@
-
-
-      #canvas-container, canvas, body, html {
-        margin: 0;
-        padding: 0;
-        overflow: hidden;
-      }
-      #canvas-container {
-        width: 100%;
-        height: 100%;
-      }
-      canvas, svg {
-        /*
-        image-rendering: optimizeSpeed;
-        image-rendering: -moz-crisp-edges;
-        image-rendering: -webkit-optimize-contrast;
-        image-rendering: optimize-contrast;
-        -ms-interpolation-mode: nearest-neighbor;
-        */
-        -webkit-touch-callout: none;
-        -webkit-text-size-adjust: none;
-        -webkit-tap-highlight-color: rgba(0,0,0,0); 
-        -webkit-user-select: none;
-        -webkit-tap-highlight-color: rgba(0,0,0,0); 
-      }
-      #fullscreen-button {
-        position: absolute; top: 0; left: 0;
-        background-color: rgba(255, 0, 0, 0.5);
-        width: 10%; height: 10%;
-      }
+#canvas-container, canvas, body, html {
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+#canvas-container {
+  width: 100%;
+  height: 100%;
+}
+canvas, svg {
+  /*
+  image-rendering: optimizeSpeed;
+  image-rendering: -moz-crisp-edges;
+  image-rendering: -webkit-optimize-contrast;
+  image-rendering: optimize-contrast;
+  -ms-interpolation-mode: nearest-neighbor;
+  */
+  -webkit-touch-callout: none;
+  -webkit-text-size-adjust: none;
+  -webkit-tap-highlight-color: rgba(0,0,0,0); 
+  -webkit-user-select: none;
+  -webkit-tap-highlight-color: rgba(0,0,0,0); 
+}
+#fullscreen-button {
+  position: absolute; top: 0; left: 0;
+  background-color: rgba(255, 0, 0, 0.5);
+  width: 10%; height: 10%;
+}
+#pause-button {
+  position: absolute; top: 0; left: 10%;
+  background-color: rgba(0, 255, 0, 0.5);
+  width: 10%; height: 10%;
+}
