--- a/public/style.css
+++ b/public/style.css
@@ -3,18 +3,19 @@
   padding: 0;
   overflow: hidden;
 }
-#canvas-container {
-  width: 100%;
-  height: 100%;
+/*
+canvas, #canvas-container {
+
+  width: 100% !important;
+  height: 100% !important;
 }
+*/
 canvas, svg {
-  /*
   image-rendering: optimizeSpeed;
   image-rendering: -moz-crisp-edges;
   image-rendering: -webkit-optimize-contrast;
   image-rendering: optimize-contrast;
   -ms-interpolation-mode: nearest-neighbor;
-  */
   -webkit-touch-callout: none;
   -webkit-text-size-adjust: none;
   -webkit-tap-highlight-color: rgba(0,0,0,0); 
