--- a/public/style.css
+++ b/public/style.css
@@ -3,19 +3,14 @@
   padding: 0;
   overflow: hidden;
 }
-/*
-canvas, #canvas-container {
-
-  width: 100% !important;
-  height: 100% !important;
-}
-*/
 canvas, svg {
+  /*
   image-rendering: optimizeSpeed;
   image-rendering: -moz-crisp-edges;
   image-rendering: -webkit-optimize-contrast;
   image-rendering: optimize-contrast;
   -ms-interpolation-mode: nearest-neighbor;
+  */
   -webkit-touch-callout: none;
   -webkit-text-size-adjust: none;
   -webkit-tap-highlight-color: rgba(0,0,0,0); 
@@ -30,5 +25,10 @@ canvas, svg {
 #pause-button {
   position: absolute; top: 0; left: 10%;
   background-color: rgba(0, 255, 0, 0.5);
+  width: 10%; height: 10%;
+}
+#debug-camera-button {
+  position: absolute; top: 0; left: 20%;
+  background-color: rgba(0, 0, 255, 0.5);
   width: 10%; height: 10%;
 }
