--- a/public/style.css
+++ b/public/style.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background: black;
+  background: white;
 }
 #mods {
   position: absolute;
@@ -40,4 +40,70 @@ canvas, svg {
   position: absolute; top: 0; left: 20%;
   background-color: rgba(0, 0, 255, 0.5);
   width: 10%; height: 10%;
+}
+
+li a:link, li a:visited {
+  display: block;
+  border: 0;
+  x-padding-left: 28px;
+  color: #c55500;
+}
+
+li a:link, li a:visited {
+  display: block;
+  border: 0;
+  x-padding-left: 28px;
+  color: #c55500;
+}
+a:visited {
+  border-bottom: 1px solid #730800;
+  color: #730800;
+}
+a:link, a:visited {
+  border-bottom: 1px solid #c55500;
+  color: #c55500;
+  text-decoration: none;
+}
+a:link, a:visited {
+  border-bottom: 1px solid #c55500;
+  color: #c55500;
+  text-decoration: none;
+}
+#pause-button a:before {
+  
+  left: 2px;
+  width: 4px;
+  height: 14px;
+
+  border: 4px solid #c55500;
+  border-width: 0 4px;
+  x-margin-top: -7px;
+  background: transparent;
+}
+li a:before, li a:after {
+  x-margin: -8px 0 0;
+  background: #c55500;
+}
+li:before, li:after, li a:before, li a:after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 0;
+}
+li a:before, li a:after {
+  x-margin: -8px 0 0;
+  background: #c55500;
+}
+li:before, li:after, li a:before, li a:after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 0;
+}
+li {
+  list-style: none;
+}
+html, body {
+  font: 1em/1.4 Cambria, Georgia, sans-serif;
+  color: #333;
 }
